# mega-zip-folder

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
mega_zip_folder/: __init__.py  core.py
tests/: test_mega_zip_folder.py
